--- a/17.html
+++ b/17.html
@@ -14,6 +14,7 @@
       text-align: center;
       line-height: 100px; /*글자의 높이가 부모박스의 높이와 동일하면 상하선상 중심배치,글자가 한줄일때만!*/
     }
+
     /*공통된 빨간색 부여!*/
     #word {background-color: red;}
 
@@ -27,8 +28,9 @@
     /* 색상에 대한 투명도 0~1사이의 소수점*/
     
     #hsl{background-color: hsl(0,100%,50%);
-    opacity:0.5;} /*요소의 투명도를 부여하는 속성, 0~1사이의 소수점=값
-    상속 = 자식요소를 포함한 모든 부분의 투명도가 적용!*/
+    opacity:0.5;}
+    /* 요소의 투명도를 부여하는 속성, 0~1사이의 소수점=값
+       상속 = 자식요소를 포함한 모든 부분의 투명도가 적용! */
     /* h색상 s채도값 l명도 */
     
     #hsla{background-color: hsla(0,100%,50%,0.5);}
