--- a/06.html
+++ b/06.html
@@ -44,7 +44,7 @@
 
     <br/><br/>
     <h1 class="bb">클래스선택자</h1>
-    <p style="color:blue;"> <!-- internal style sheet 인라인스타일 : 유지보수나 환경에 따라 사용하지만 비추천-->
+    <p style="color:blue;"> <!-- internal style sheet 인라인스타일 : 유지보수나 환경에 따라 사용하지만 비추천, 외부파일 추천-->
       : 본문(class="name") / 스타일(.)
         특정한 이름을 부여하여 선택하는 선택자로, html화면 내에서 하나의 이름으로 여러군데 여러번 사용가능 <br/>
         주로 작은 단락, 작은요소, 변화가 잦을 스타일
