--- a/07.html
+++ b/07.html
@@ -25,10 +25,11 @@
 
   body{
     background-color: aquamarine; /*배경색상*/
-    background-image: url(img/버즈\ 우디.jpg); /*배경이미지 속성 > url(이미지의 경로)
+    background-image: url(img/버즈\ 우디.jpg);
+    /* 배경이미지 속성 > url(이미지의 경로)
     이미지 사이즈가 부모의 사이즈보다 작을 때, 반복되는 성격을 가지고 있음*/
     background-repeat: no-repeat;
-    /*배경이미지 반복 속성
+    /* 배경이미지 반복 속성
     > no-repeat 반복되지 않는 원본 한장, repeat-x (가로반복), repeat-y (세로반복), repeat(반복,기본값)*/
     background-size: 300px 200px; /*배경이미지 사이즈 속성 - x가로폭, y세로폭 / px, %값*/
   }
