--- a/08.html
+++ b/08.html
@@ -18,9 +18,6 @@
     margin : 바깥여백 - (바깥으로) 박스 혹은 다른 요소와의 틈, 간격 / 전체면 적용(위,아래,양,옆)
   -->
 
-  <!--
-   실제 박스 사이즈
-    
-  -->
+  <!--  실제 박스 사이즈: 박스 가로길이, border값, margin값, padding값 다 더해야 함 -->
 </body>
 </html>
