--- a/12_2.html
+++ b/12_2.html
@@ -9,7 +9,7 @@
     li{
       list-style: square; /* li태그의 스타일을 결정하는 속성 */
       /* disc채운원, circle빈원, square채운사각형, none없음-기본값 */
-      list-style-type:; 
+      list-style-type: decimal; 
       /* decimal : 십진수-기본값, decimal-leading-zero : 0 붙는 십진수,
          lower-roman로마숫자 소문자, upper-roman대문자, lower-alpha알파벳 소문자, upper-alpha알파벳 대문자 */
     }
@@ -22,7 +22,6 @@
         - dl (정의목록태그, 용어 뜻을 나열) dl>dt,dd
         -----------------------------------------------------
         안쪽에 속하는 태그들 함께 사용  / 쌓이니까 block태그 형태임 -->
-    
    <ul>
       <li>회사소개</li>
       <li>생산설비</li>
