--- a/15_1.html
+++ b/15_1.html
@@ -23,8 +23,7 @@
   <!-- 속성선택자 : 특정한 속성이나 특정한 속성값을 가지고 있는 html요소를 선택 []
   [속성이름="속성값"]
   [속성이름$="속성값"]
-  [속성이름*="속성값"]
-  -->
+  [속성이름*="속성값"]  -->
 
   <input type="text" />
   <div class="box">
