--- a/25.html
+++ b/25.html
@@ -8,9 +8,8 @@
 </head>
 <body>
   <!--
-    <position>
-: 요소를 특정한 위치로 지정하여 배치하는 속성
-  어떻게 위치할지 결정하는 속성
+  <position>
+  : 요소를 특정한 위치로 지정하여 배치하는 속성 / 어떻게 위치할지 결정하는 속성
 
 * 위치지정시 사용가능한 속성 - left, right, top, bottom
 * static - 기본값 (위치 영향을 받지 않음)
