--- a/26.html
+++ b/26.html
@@ -12,8 +12,7 @@
 * 글자 중앙정렬할 때 : text-align:center; (block은 margin값 auto처리)
   position-absolute에서는 auto처리 불가
 
-* 태그 선택할 수 있는 형태
-nth-of-type(1)  
+* 태그 선택할 수 있는 형태 / nth-of-type(1)  
 
 * 부모안에 모든 자식요소들을 의미 nth-child
 * 부모안에 있는 자식들 중 선택하고 싶은,
